--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AppointmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -189,15 +190,22 @@
     <Compile Include="Migrations\201910200437381_ValuesIntoUserType.Designer.cs">
       <DependentUpon>201910200437381_ValuesIntoUserType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910201859243_UpdateModelPlusViews.cs" />
+    <Compile Include="Migrations\201910201859243_UpdateModelPlusViews.Designer.cs">
+      <DependentUpon>201910201859243_UpdateModelPlusViews.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\DoctorSpecialty.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Specialties.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AppointmentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-pulse.css" />
@@ -257,6 +265,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Appointment\Set_Appointment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -286,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910200437381_ValuesIntoUserType.resx">
       <DependentUpon>201910200437381_ValuesIntoUserType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910201859243_UpdateModelPlusViews.resx">
+      <DependentUpon>201910201859243_UpdateModelPlusViews.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
