--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -194,18 +194,23 @@
     <Compile Include="Migrations\201910201859243_UpdateModelPlusViews.Designer.cs">
       <DependentUpon>201910201859243_UpdateModelPlusViews.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910222239451_FixingUserTypeAndUsers.cs" />
+    <Compile Include="Migrations\201910222239451_FixingUserTypeAndUsers.Designer.cs">
+      <DependentUpon>201910222239451_FixingUserTypeAndUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\DoctorSpecialty.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Specialties.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserType.cs" />
+    <Compile Include="Models\UserTypeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\AppointmentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-pulse.css" />
@@ -266,9 +271,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Appointment\Set_Appointment.cshtml" />
+    <Content Include="Views\Appointment\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -298,6 +305,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910201859243_UpdateModelPlusViews.resx">
       <DependentUpon>201910201859243_UpdateModelPlusViews.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910222239451_FixingUserTypeAndUsers.resx">
+      <DependentUpon>201910222239451_FixingUserTypeAndUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
