--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -292,6 +292,7 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Appointment\Set_Appointment.cshtml" />
     <Content Include="Views\Appointment\Index.cshtml" />
+    <Content Include="Views\Appointment\Appointment_Set.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
