--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -233,14 +233,22 @@
     <Content Include="Content\Site.css" />
     <Content Include="Pictures\appointment.png" />
     <Content Include="Pictures\clock.png" />
+    <Content Include="Pictures\doc11.png" />
+    <Content Include="Pictures\doc22.png" />
+    <Content Include="Pictures\doc33.png" />
+    <Content Include="Pictures\doc44.png" />
     <Content Include="Pictures\doctor1.jpg" />
     <Content Include="Pictures\doctor2.jpg" />
     <Content Include="Pictures\doctor3.jpg" />
-    <Content Include="Pictures\Layer.png" />
+    <Content Include="Pictures\icon3_0000_.jpg" />
+    <Content Include="Pictures\icon3_0001_.jpg" />
+    <Content Include="Pictures\icon3_0003_.jpg" />
+    <Content Include="Pictures\icon3_0004_.jpg" />
+    <Content Include="Pictures\icon3_0005_.jpg" />
+    <Content Include="Pictures\Layer1.png" />
+    <Content Include="Pictures\Login-Background.jpg" />
+    <Content Include="Pictures\pexel_2.jpg" />
     <Content Include="Pictures\question-icon.png" />
-    <Content Include="Pictures\slider-1.jpg" />
-    <Content Include="Pictures\slider2 %282%29.jpg" />
-    <Content Include="Pictures\slider2.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
