--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -231,6 +231,7 @@
     <Content Include="Migrations\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Pictures\About-image.jpg" />
     <Content Include="Pictures\appointment.png" />
     <Content Include="Pictures\clock.png" />
     <Content Include="Pictures\doc11.png" />
