--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -232,8 +232,10 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Pictures\About-image.jpg" />
+    <Content Include="Pictures\aboutus1.jpg" />
     <Content Include="Pictures\appointment.png" />
     <Content Include="Pictures\clock.png" />
+    <Content Include="Pictures\contactus.png" />
     <Content Include="Pictures\doc11.png" />
     <Content Include="Pictures\doc22.png" />
     <Content Include="Pictures\doc33.png" />
