--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -210,6 +210,10 @@
     <Compile Include="Migrations\201910282206290_ChangingUserTableByExtendingAspNetUsersWithAdditionalAttributes.Designer.cs">
       <DependentUpon>201910282206290_ChangingUserTableByExtendingAspNetUsersWithAdditionalAttributes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910282304137_DeletedUserTable.cs" />
+    <Compile Include="Migrations\201910282304137_DeletedUserTable.Designer.cs">
+      <DependentUpon>201910282304137_DeletedUserTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -218,7 +222,6 @@
     <Compile Include="Models\DoctorSpecialty.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Specialties.cs" />
-    <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Models\UserTypeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -399,6 +402,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910282206290_ChangingUserTableByExtendingAspNetUsersWithAdditionalAttributes.resx">
       <DependentUpon>201910282206290_ChangingUserTableByExtendingAspNetUsersWithAdditionalAttributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910282304137_DeletedUserTable.resx">
+      <DependentUpon>201910282304137_DeletedUserTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
