--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -214,6 +214,10 @@
     <Compile Include="Migrations\201910282304137_DeletedUserTable.Designer.cs">
       <DependentUpon>201910282304137_DeletedUserTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910291756022_updateAppointment.cs" />
+    <Compile Include="Migrations\201910291756022_updateAppointment.Designer.cs">
+      <DependentUpon>201910291756022_updateAppointment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -225,6 +229,8 @@
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Models\UserTypeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppointmentService.cs" />
+    <Compile Include="Services\DoctorService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AppointmentViewModel.cs" />
   </ItemGroup>
@@ -402,6 +408,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910282304137_DeletedUserTable.resx">
       <DependentUpon>201910282304137_DeletedUserTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910291756022_updateAppointment.resx">
+      <DependentUpon>201910291756022_updateAppointment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
