--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -290,6 +290,7 @@
     <Content Include="Pictures\appointment.png" />
     <Content Include="Pictures\clock.png" />
     <Content Include="Pictures\contactus.png" />
+    <Content Include="Pictures\contactus2.jpg" />
     <Content Include="Pictures\doc11.png" />
     <Content Include="Pictures\doc22.png" />
     <Content Include="Pictures\doc33.png" />
