--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -45,6 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=2019.1.3.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.2019.1.3\lib\net20\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -229,6 +232,10 @@
     <Compile Include="Migrations\201910310220175_ChangedRequired.cs" />
     <Compile Include="Migrations\201910310220175_ChangedRequired.Designer.cs">
       <DependentUpon>201910310220175_ChangedRequired.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910312011533_UserTypeIdToString.cs" />
+    <Compile Include="Migrations\201910312011533_UserTypeIdToString.Designer.cs">
+      <DependentUpon>201910312011533_UserTypeIdToString.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -433,6 +440,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910310220175_ChangedRequired.resx">
       <DependentUpon>201910310220175_ChangedRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910312011533_UserTypeIdToString.resx">
+      <DependentUpon>201910312011533_UserTypeIdToString.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
