--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -189,9 +189,10 @@
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Models\UserTypeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppointmentService.cs" />
+    <Compile Include="Services\UserService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AppointmentViewModel.cs" />
-    <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\css\bootstrap-datetimepicker.min.css" />
@@ -414,6 +415,7 @@
     <Content Include="Views\Shared\_Layout2.cshtml" />
     <Content Include="Views\Home\Index2.cshtml" />
     <Content Include="Views\Home\AddAppointment.cshtml" />
+    <Content Include="Views\Appointment\Set_Appointment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
