--- a/IQuad2/IQuad2.csproj
+++ b/IQuad2/IQuad2.csproj
@@ -172,8 +172,11 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Constants\Menus.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminAccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AppointmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ManageAdminController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -249,6 +252,35 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\bg-1.png" />
+    <Content Include="Images\directory-bg.jpg" />
+    <Content Include="Images\favicon.ico" />
+    <Content Include="Images\flags\french_flag.jpg" />
+    <Content Include="Images\flags\germany_flag.jpg" />
+    <Content Include="Images\flags\italy_flag.jpg" />
+    <Content Include="Images\flags\russia_flag.jpg" />
+    <Content Include="Images\flags\spain_flag.jpg" />
+    <Content Include="Images\flags\us_flag.jpg" />
+    <Content Include="Images\logo-light.png" />
+    <Content Include="Images\logo-sm.png" />
+    <Content Include="Images\logo.png" />
+    <Content Include="Images\small\img-1.jpg" />
+    <Content Include="Images\small\img-2.jpg" />
+    <Content Include="Images\small\img-3.jpg" />
+    <Content Include="Images\small\img-4.jpg" />
+    <Content Include="Images\small\img-5.jpg" />
+    <Content Include="Images\small\img-6.jpg" />
+    <Content Include="Images\small\img-7.jpg" />
+    <Content Include="Images\users\user-1.jpg" />
+    <Content Include="Images\users\user-10.jpg" />
+    <Content Include="Images\users\user-2.jpg" />
+    <Content Include="Images\users\user-3.jpg" />
+    <Content Include="Images\users\user-4.jpg" />
+    <Content Include="Images\users\user-5.jpg" />
+    <Content Include="Images\users\user-6.jpg" />
+    <Content Include="Images\users\user-7.jpg" />
+    <Content Include="Images\users\user-8.jpg" />
+    <Content Include="Images\users\user-9.jpg" />
     <Content Include="Pictures\About-image.jpg" />
     <Content Include="Pictures\aboutus1.jpg" />
     <Content Include="Pictures\appointment.png" />
@@ -343,6 +375,38 @@
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Shared\_Breadcrumb.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Admin\LogIn.cshtml" />
+    <Content Include="Views\Pages\BadRequest.cshtml" />
+    <Content Include="Views\Pages\Blank.cshtml" />
+    <Content Include="Views\Pages\Directory.cshtml" />
+    <Content Include="Views\Pages\InternalServerError.cshtml" />
+    <Content Include="Views\Pages\Invoice.cshtml" />
+    <Content Include="Views\Pages\LockScreen.cshtml" />
+    <Content Include="Views\Pages\Login.cshtml" />
+    <Content Include="Views\Pages\RecoverPassword.cshtml" />
+    <Content Include="Views\Pages\Register.cshtml" />
+    <Content Include="Views\Pages\Timeline.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\AdminAccount\ConfirmEmail.cshtml" />
+    <Content Include="Views\AdminAccount\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Views\AdminAccount\ExternalLoginFailure.cshtml" />
+    <Content Include="Views\AdminAccount\ForgotPassword.cshtml" />
+    <Content Include="Views\AdminAccount\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Views\AdminAccount\Login.cshtml" />
+    <Content Include="Views\AdminAccount\ResetPassword.cshtml" />
+    <Content Include="Views\AdminAccount\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Views\AdminAccount\SendCode.cshtml" />
+    <Content Include="Views\AdminAccount\VerifyCode.cshtml" />
+    <Content Include="Views\AdminAccount\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Views\ManageAdmin\AddPhoneNumber.cshtml" />
+    <Content Include="Views\ManageAdmin\ChangePassword.cshtml" />
+    <Content Include="Views\ManageAdmin\Index.cshtml" />
+    <Content Include="Views\ManageAdmin\ManageLogins.cshtml" />
+    <Content Include="Views\ManageAdmin\SetPassword.cshtml" />
+    <Content Include="Views\ManageAdmin\VerifyPhoneNumber.cshtml" />
+    <Content Include="Views\Shared\_AdminLoginPartial.cshtml" />
+    <Content Include="Views\Shared\_AdminNavBar.cshtml" />
+    <Content Include="Views\AdminAccount\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
